--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -94,7 +94,11 @@
 
     <div class="row apartments-list">
     {% for apartment in apartments %}
-        {% include 'apartments/single_apartment.html' with apartment=apartment %}
+        <div data-address="{{ apartment.address }}" data-price="{{ apartment.price }}" class="col-md-4 col-lg-3 col-12 col-sm-6 single-apartment" style="padding:1rem">
+            <div class="gray-background border-shadow">
+                {% include 'apartments/single_apartment.html' with apartment=apartment %}
+            </div>
+        </div>
     {% endfor %}
     </div>
 
