--- a/Castle/templates/apartments/single_apartment.html
+++ b/Castle/templates/apartments/single_apartment.html
@@ -1,23 +1,19 @@
 {% load pipes %}
 
-
-<div data-address="{{ apartment.address }}" data-price="{{ apartment.price }}" class="col-md-4 col-lg-3 col-12 col-sm-6 single-apartment" style="padding:1rem">
-    <div class="gray-background border-shadow">
-       <div class="card bg-custom border-shadow text-white" style="text-align:left">
-           <a href="{{ apartment.id }}"><img class="card-img-top" src="{{ apartment.main_pic }}" alt="apartment pic"></a>
-            <div class="card-body single-apartment">
-                <h5 class="card-title"><a href="{{ apartment.id }}">{{ apartment.address }}</a></h5>
-                <h6 class="card-subtitle">{{ apartment.zip_code.id }} {{ apartment.zip_code.town }}</h6>
-                <h6>{{ apartment.price | dotSeperator }} ISK</h6>
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <p>{{ apartment.size }} sqm</p>
-                    </div>
-                    <div>
-                        <p>Rooms: {{ apartment.rooms }}</p>
-                    </div>
-                </div>
+<div class="card bg-custom border-shadow text-white">
+    <a href="{{ apartment.id }}"><img class="card-img-top" src="{{ apartment.main_pic }}" alt="apartment pic"></a>
+    <div class="card-body single-apartment">
+        <h5 class="card-title"><a href="{% url 'apartment_info' apartment.id %}">{{ apartment.address }}</a></h5>
+        <h6 class="card-subtitle">{{ apartment.zip_code.id }} {{ apartment.zip_code.town }}</h6>
+        <h6>{{ apartment.price | dotSeperator }} ISK</h6>
+        <div class="d-flex justify-content-between">
+            <div>
+                <p>{{ apartment.size }} sqm</p>
+            </div>
+            <div>
+                <p>Rooms: {{ apartment.rooms }}</p>
             </div>
         </div>
     </div>
 </div>
+
