--- a/Castle/templates/users/login.html
+++ b/Castle/templates/users/login.html
@@ -5,21 +5,22 @@
         <div class="col-sm-5 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
                 <div class="card-body">
-                    <form class="form form-horizontal" role="form" method="POST">
+                    <form class="form" method="POST">
                         {% csrf_token %}
-                <div class="form-group">
-                    <label for="username" class="col-sm-12 control-label">Username</label>
-                    <div class="col-sm-9">
-                        <input name="username" type="text" class="form-control" autofocus>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="password" class="col-sm-12 control-label">Password</label>
-                    <div class="col-sm-9">
-                        <input name="password" type="password" class="form-control" autofocus>
+                        {{ form }}
+{#                <div class="form-group">#}
+{#                    <label for="username" class="col-sm-12 control-label">Username</label>#}
+{#                    <div class="col-sm-9">#}
+{#                        <input name="username" type="text" class="form-control" autofocus>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="form-group">#}
+{#                    <label for="password" class="col-sm-12 control-label">Password</label>#}
+{#                    <div class="col-sm-9">#}
+{#                        <input name="password" type="password" class="form-control" autofocus>#}
                         <a href="/users/forgot_pass">Forgot password</a>
-                    </div>
-                </div>
+{#                    </div>#}
+{#                </div>#}
                 <div class="form-group">
                     <button style="margin-left:15px;margin-top:4%;"type="submit" class="btn green-button">Login</button>
                 </div>
