--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -88,6 +88,8 @@
         <input id="max_price_django" type="text" value="{{ details.max_price }}">
         <input id="min_size_django" type="text" value="{{ details.min_size }}">
         <input id="max_size_django" type="text" value="{{ details.max_size }}">
+        <input id="rooms_django" type="text" value="{{ details.rooms }}">
+        <input id="zipcodes_django" type="text" value="{{ details.zipcodes }}">
     </div>
 
     {% include 'apartments/zip_codes.html' %}
