seperated buyer and seller in registration and profiles

--- a/Castle/templates/users/buyer_profile.html
+++ b/Castle/templates/users/buyer_profile.html
@@ -2,7 +2,7 @@
 
 {% block mainbody %}
 
-    <h1>Profile for {{ user.username }}</h1>
+    <h1>Profile for buyer {{ user.username }}</h1>
     <h5>Name: {{ info.name }}</h5>
 
 {% endblock %}
