--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -3,7 +3,7 @@
 
 {% block mainbody %}
 	<div class="row m-3">
-        <div class="col-6 pl-0 pr-2">
+        <div class="col-md-6 col-lg-6 col-12 pl-0 pr-2">
             <div class="col-12 red-background border-shadow">
 			<div class="card border-shadow">
 				<div class="card-body">
@@ -73,8 +73,8 @@
 			</div>
 		</div>
         </div>
-        <div class="col-6 pr-0 pl-2">
-            <div class="col-12 gray-background border-shadow">
+        <div class="col-md-6 col-lg-6 col-12 col-sm-12 pl-0 pr-2">
+            <div class="col-12 gray-background border-shadow" style="height: 99%;">
             <div class="featured_apartments">
                 {% for apartment in featured %}
                     {% include 'apartments/single_apartment.html' with apartment=apartment.apartment %}
@@ -88,12 +88,12 @@
 
     <div class="w-100 px-3 pb-3">
         <div class="gray-background border-shadow w-100">
-            <div class="row">
+            <div class="row" style="margin:auto !important">
                 <div class="col-2"><h4 class="prev_arrow"><</h4></div>
-                <div class="col-8"><h5>Newest apartments</h5></div>
+                <div class="col-8" style="text-align:center"><h5>Newest apartments</h5></div>
                 <div class="col-2"><h4 class="next_arrow text-right">></h4></div>
             </div>
-            <div class="container px-0 m-0">
+            <div class="new_aparts-container container px-0 m-0">
                 <div class="newest_apartments">
                     {% for apartment in newest %}
                         {% include 'apartments/single_apartment.html' with apartment=apartment %}
