--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -7,15 +7,15 @@
             <div class="card-body">
                 <form>
                     <div class="row form-group">
-                        <div class="col-8">
+                        <div class="col-12 col-lg-8 col-md-8">
                             <input value="{{ details.address }}" autocomplete="off" type="text" class="form-control" id="search_address" placeholder="Name/address">
                         </div>
-                        <div class="col-2">
+                        <div class="col-lg-2 col-md-2 col-12">
                             <select id="search_zip" class="form-control">
                                 <option id="howManyZips" selected>Zip codes</option>
                             </select>
                         </div>
-                        <div class="col-2">
+                        <div class="col-md-2 col-lg-2 col-12">
                             <select id="search_rooms" class="form-control">
                                 <option selected>Rooms</option>
                                 <option>1</option>
