--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -34,7 +34,7 @@
                 {% if request.user.is_authenticated %}
                     <li class ="nav-item login-nav" style="padding-left: 0.8rem">
                         <a class ="nav-link" href="{% url 'profile' %}"> My Profile </a></li>
-                    <li class ="nav-item login-nav">
+                    <li class ="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}"> Logout </a></li>
                 {% else %}
                     <li class ="nav-item login-nav" style="padding-left: 0.8rem">
