footer, site info, styling and buyer profile changes

--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -306,6 +306,6 @@ body {
 .zip-option input[type="checkbox"] {
     vertical-align: unset;
 }
-.new_aparts-container {
+.new_aparts-container, .search-history-container {
     margin:auto !important;
 }
