--- a/Castle/templates/site_information/about_us.html
+++ b/Castle/templates/site_information/about_us.html
@@ -1,10 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>About us</title>
-</head>
-<body>
-Hello
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block mainbody %}
+
+<div class="w-100 p-3">
+    <div class="w-100 gray-background border-shadow">
+        <div class="card white-background border-shadow">
+            <div class="card-body row p-0">
+                <div class="col-12">
+                    <h5>Guðrún Helga Finnsdóttir</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-100 gray-background border-shadow">
+        <div class="card white-background border-shadow">
+            <div class="card-body row p-0">
+                <div class="col-12">
+                    <h5>Reynir Freyr Hauksson</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-100 gray-background border-shadow">
+        <div class="card white-background border-shadow">
+            <div class="card-body row p-0">
+                <div class="col-12">
+                    <h5>Sigurður Már Steinþórsson</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-100 gray-background border-shadow">
+        <div class="card white-background border-shadow">
+            <div class="card-body row p-0">
+                <div class="col-12">
+                    <h5>Viðar Óli Aðalsteinsson</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
