--- a/Castle/templates/users/buyer_profile.html
+++ b/Castle/templates/users/buyer_profile.html
@@ -32,12 +32,12 @@
 
     <div class="w-100 p-3">
         <div class="w-100 gray-background border-shadow">
-            <div class="row">
+             <div class="row" style="margin:auto !important">
                 <div class="col-2"><h4 class="prev_arrow"><</h4></div>
-                <div class="col-8"><h5>Search history</h5></div>
+                <div class="col-8" style="text-align:center"><h5>Search history</h5></div>
                 <div class="col-2"><h4 class="next_arrow text-right">></h4></div>
             </div>
-            <div class="container px-0 m-0">
+            <div class="search-history-container container px-0 m-0">
                 {#                <div class="newest_apartments">#}
                 {#                    {% for apartment in newest %}#}
                 {#                        {% include 'apartments/single_apartment.html' with apartment=apartment %}#}
