--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -55,12 +55,12 @@
         <div class="row mx-2">
             <div class="col-6">
                 <span class="navbar-text">
-                    <a href = '/site_information/about_us'> Castle apartments <br> About us</a>
+                    <a href = '/site_information/about_us'>About the team</a>
                 </span>
             </div>
             <div class="col-6 text-right">
                 <span class="navbar-text">
-                    <a href = '/site_information/contact_us'> castle@castle-apartments.com<br> Contact us</a>
+                    <a href = 'mailto:contact@castle-apartments.com'>contact@castle-apartments.com</a>
                 </span>
             </div>
         </div>
