Use 'enter' to search from search engine

--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="col-12 text-right">
-                            <button id="clearFormButton" class="btn red-button">Clear</button>
+                            <a id="clearFormButton" class="btn red-button">Clear</a>
                             <button id="submitFormButton" type="submit" class="btn green-button">Search</button>
                         </div>
                     </div>
