--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -64,8 +64,8 @@
 						<br>
 						<div class="form-row">
 							<div class="form-group col-12" style="text-align: right">
-								<button id="clearFormButton" class="btn red-button">Clear</button>
-								<button id="submitFormHomeButton" type="submit" class="btn green-button">Search</button>
+								<a id="clearFormButton" class="btn red-button">Clear</a>
+                                <button id="submitFormHomeButton" class="btn green-button">Search</button>
 							</div>
 						</div>
 					</form>
