--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -23,16 +23,21 @@
     background-color: #5E1D1D;
     padding: 1rem;
 }
-.red-button {
+.red-button, #clearFormButton {
     background: #5E1D1D;
     color: white;
     width: 8rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
 }
-.red-button:hover, .green-button:hover {
+.red-button:hover, .green-button:hover, #clearFormButton:hover {
     color:rgba(255, 255, 255, 0.7)
 }
+
+#clearFormButton:hover {
+    cursor:pointer
+}
+
 .green-button {
     background: #257E29;
     color: white;
