--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -71,9 +71,39 @@
 {#                </div>#}
                         <!--<div class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
                 <button type="reset" class="red-button" >Cancel</button>-->
-                <button type="submit" class="green-button">Register</button>
+                        <script src='https://www.google.com/recaptcha/api.js'></script>
+                        <div style="margin:0.5rem 0rem" class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
 
-            </form> <!-- /form -->
+                        <button type="submit" class="green-button">Register</button>
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-danger">
+                                    {{ message|safe }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
+
+
+
+
+
+
+                        {% if form.errors %}
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    <div class="alert alert-danger">
+                                        {{ error|escape }}
+                                    </div>
+                                {% endfor %}
+                            {% endfor %}
+                            {% for error in form.non_field_errors %}
+                                <div class="alert alert-danger">
+                                    {{ error|escape }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    </form> <!-- /form -->
                 </div>
             </div>
         </div>
