--- a/Castle/templates/users/login.html
+++ b/Castle/templates/users/login.html
@@ -7,7 +7,7 @@
                 <div class="card-body">
                     <form class="form" method="POST">
                         {% csrf_token %}
-                        {{ form }}
+                        {{ form.as_p }}
 {#                <div class="form-group">#}
 {#                    <label for="username" class="col-sm-12 control-label">Username</label>#}
 {#                    <div class="col-sm-9">#}
@@ -24,6 +24,20 @@
                 <div class="form-group">
                     <button style="margin-left:15px;margin-top:4%;"type="submit" class="btn green-button">Login</button>
                 </div>
+                          {% if form.errors %}
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    <div class="alert alert-danger">
+                                        {{ error|escape }}
+                                    </div>
+                                {% endfor %}
+                            {% endfor %}
+                            {% for error in form.non_field_errors %}
+                                <div class="alert alert-danger">
+                                    {{ error|escape }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
                     </form>
                 </div>
             </div>
