--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -6,88 +6,22 @@
         <div class="col-sm-10 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
                 <div style="padding-left:5%; padding-top:3%;" class="card-body">
-                    <h5 style="color:#5F1C1C; margin-bottom:5%;">Register new user</h5>
+                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Register new user</h5>
                     <form class="form" method="POST">
                         {% csrf_token %}
-                        {{ form }}
-
-{#                <div class="form-group">#}
-{#                    <label for="name" class="col-sm-12 control-label">Name</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <input type="text" name="name" placeholder="Name" class="form-control" autofocus>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                    <label for="username" class="col-sm-12 control-label">Username</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <input type="text" name="username" placeholder="Username" class="form-control" autofocus>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                    <label for="phone" class="col-sm-12 control-label">Phone</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <input type="tel" placeholder="Phone" class="form-control" name= "phone">#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                    <label for="email" class="col-sm-12 control-label">Email</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <input type="email" name="email" placeholder="Email" class="form-control">#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                    <label for="password1" class="col-sm-12 control-label">Password</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <input type="password" name="password" placeholder="Password" class="form-control">#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                    <label for="password2" class="col-sm-12 control-label">Repeat password</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <input type="password" placeholder="Repeat password" class="form-control">#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                    <label for="phoneNumber" class="col-sm-12 control-label">Security question</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <select name="security_question">#}
-{#                            <option value="What was your first cat's name?">What was your first cat's name?</option>#}
-{#                            <option value="What's the name of your first dog?">What's the name of your first dog?</option>#}
-{#                            <option value="Reynir notar HGH?">Reynir notar HGH?</option>#}
-{#                            <option value="What's your favorite car make?">What's your favorite car make?</option>#}
-{#                            <option value="Whats your cars licence plate number?">What's your cars licence plate number?</option>#}
-{#                        </select>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                        <label for="Height" class="col-sm-12 control-label">Answer</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <input name="security_answer" style="margin-bottom:5%;"type="text" class="form-control">#}
-{#                    </div>#}
-{#                </div><!-- /.form-group -->#}
-{#                <div class="form-group">#}
-{#                    <div class="col-sm-9 col-sm-offset-12">#}
-{#                    </div>#}
-{#                </div>#}
-                        <!--<div class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
-                <button type="reset" class="red-button" >Cancel</button>-->
+                        {{ form.as_p }}
                         <script src='https://www.google.com/recaptcha/api.js'></script>
                         <div style="margin:0.5rem 0rem" class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
 
                         <button type="submit" class="green-button">Register</button>
-                        {% if messages %}
+
+                        {% if messages %} {# For Google Captcha #}
                             {% for message in messages %}
                                 <div class="alert alert-danger">
                                     {{ message|safe }}
                                 </div>
                             {% endfor %}
                         {% endif %}
-
-
-
-
-
-
 
                         {% if form.errors %}
                             {% for field in form %}
