The whole reset password process

--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -60,7 +60,7 @@
             </div>
             <div class="col-6 text-right">
                 <span class="navbar-text">
-                    <a href = 'mailto:contact@castle-apartments.com'>contact@castle-apartments.com</a>
+                    <a href = 'mailto:contact@castle-apartments.com'>castle.apartments.contact@gmail.com</a>
                 </span>
             </div>
         </div>
