--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -5,7 +5,7 @@
     <div class="row m-3">
         <div class="col-sm-10 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
-                <div style="padding-left:5%; padding-top:3%;" class="card-body">
+                <div class="card-body">
                     <h5 style="color:#5F1C1C; margin-bottom:2%;">Register new user</h5>
                     <form class="form" method="POST">
                         {% csrf_token %}
