--- a/Castle/templates/users/buyer_profile.html
+++ b/Castle/templates/users/buyer_profile.html
@@ -8,12 +8,12 @@
                 <div class="col-md-4 col-lg-4 col-12" style="float:left;text-align:center">
                     <img class="profile-picture" style="width: 100%;" src="https://banner2.kisspng.com/20180325/wae/kisspng-business-google-account-organization-service-avatar-5ab752c6a54db0.2719189215219637186771.jpg">
                 </div>
-                <div class="profile-info col-md-8 col-lg-8 col-12" style="float:right;text-align:center">
+                <a class="profile-info col-md-8 col-lg-8 col-12" style="float:right;text-align:center">
                     <h3>{{ user.username }}</h3>
                     <h5>Name: {{ info.name}}</h5>
                     <h5>Phone: {{ info.phone }}</h5>
                     <h5>E-mail: {{ info.email }}</h5>
-                    <button id="editButton" type="submit" class="btn green-button">Edit</button>
+                    <a href="/users/edit_user"><button id="editButton" type="submit" class="btn green-button">Edit</button></a>
                 </div>
             </div>
         </div>
