--- a/Castle/templates/apartments/buy_contact.html
+++ b/Castle/templates/apartments/buy_contact.html
@@ -20,7 +20,9 @@
                     <h5 class="card-title">Add your contact information</h5>
                     <form class="form" method="POST">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        <table class="w-75 m-3">
+                            {{ form }}
+                        </table>
                         <button type="submit" class="btn red-button">Cancel</button>
                         <button type="submit" class="btn green-button float-right">Continue</button>
                     </form>
