If user knows password he can change it on his site

--- a/Castle/templates/users/change_password.html
+++ b/Castle/templates/users/change_password.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Edit Profile</title>
+<title>Change pass</title>
 {% endblock %}
 
 {% block mainbody %}
@@ -12,7 +12,6 @@
         <button type="submit">Update</button>
     </form>
     <br>
-<a href = "/users/change-password"> <button> Change my password</button></a>
 </div>
 
 {% endblock %}
