--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -255,10 +255,16 @@ input[type="checkbox"]
     .profile-picture {
         max-width:50%;
     }
+    #editButton, #changePassword {
+        width:100%;
+    }
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
     .profile-info  {
         text-align: left !important;
+    }
+    #editButton, #changePassword {
+        width:30%;
     }
 }
 
