--- a/Castle/templates/users/buyer_profile.html
+++ b/Castle/templates/users/buyer_profile.html
@@ -13,18 +13,14 @@
                     <h5>Name: {{ info.name}}</h5>
                     <h5>Phone: {{ info.phone }}</h5>
                     <h5>E-mail: {{ info.email }}</h5>
-                    <a href="/users/edit_user"><button id="editButton" type="submit" class="btn green-button">Edit</button></a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="w-100 px-3">
-        <div class="w-100 gray-background border-shadow">
-            <div class="card border-shadow">
-                <div class="card-body">
-                    <h5 class="card-title">Creditcard: </h5>
-                    <button id="change_cc" type="submit" class="btn green-button">Change</button>
+                    <br>
+                    <div>
+                        <a href="/users/edit_user"><button id="editButton" type="submit" class="btn green-button">Edit profile</button></a>
+                    </div>
+                    <br>
+                    <div>
+                        <a href="/users/change_password"><button id="changePassword" type="submit" class="btn green-button">Change password</button></a>
+                    </div>
                 </div>
             </div>
         </div>
