--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -251,7 +251,7 @@ input[type="checkbox"]
         width:100%;
     }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 863px) {
     .profile-picture {
         max-width:50%;
     }
@@ -259,7 +259,12 @@ input[type="checkbox"]
         width:100%;
     }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 863px) and (min-width: 768px) {
+    .profile-info {
+        text-align: left !important;
+    }
+}
+@media screen and (min-width: 864px) {
     .profile-info  {
         text-align: left !important;
     }
