pepp for profile picture editing

--- a/Castle/templates/users/buyer_profile.html
+++ b/Castle/templates/users/buyer_profile.html
@@ -5,8 +5,13 @@
     <div class="m-3 red-background border-shadow">
         <div class="card border-shadow bg-white">
             <div class="card-body">
-                <div class="col-md-4 col-lg-4 col-12" style="float:left;text-align:center">
-                    <img class="profile-picture" style="width: 100%;" src="https://banner2.kisspng.com/20180325/wae/kisspng-business-google-account-organization-service-avatar-5ab752c6a54db0.2719189215219637186771.jpg">
+                <div class="col-md-4 col-lg-4 col-12" id="editProfilePicture" style="float:left;text-align:center">
+                    <div class="avatar-container">
+                        <img class="profile-picture" style="width: 100%;" src="https://banner2.kisspng.com/20180325/wae/kisspng-business-google-account-organization-service-avatar-5ab752c6a54db0.2719189215219637186771.jpg">
+                         <div class="middle">
+                            <div class="text">Edit <i class="fas fa-pencil-alt"></i></div>
+                        </div>
+                    </div>
                 </div>
                 <a class="profile-info col-md-8 col-lg-8 col-12" style="float:right;text-align:center">
                     <h3>{{ user.username }}</h3>
