--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -330,3 +330,31 @@ body {
 .change_password ul {
     display: none;
 }
+.profile-picture {
+    border:solid 1px #5e1d1d;
+    border-radius:100%
+}
+
+.middle {
+    bottom: 50%;
+    opacity: 0;
+    background: rgba(0,0,0,0.5);
+    color: white;
+    padding: 0.4rem 0rem;
+    cursor: pointer;
+    border-radius: 10%;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    width: 6rem;
+}
+
+.avatar-container:hover .profile-picture {
+    opacity: 0.4;
+    filter:brightness(0.6)
+}
+.avatar-container:hover .middle {
+    opacity: 1;
+}
